--- a/package.json
+++ b/package.json
@@ -4,22 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "rollup -c -w",
-    "build": "rollup -c"
+    "dev": "webpack",
+    "start": "webpack serve"
   },
-  "keywords": [
-    "webpack",
-    "rollup"
-  ],
-  "author": "Olga",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/marxt2016/builders.git"
+  },
+  "keywords": [],
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/marxt2016/builders/issues"
+  },
+  "homepage": "https://github.com/marxt2016/builders#readme",
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "rollup-plugin-img": "^1.1.0",
-    "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.0",
-    "rollup-plugin-styles": "^3.14.1"
+    "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.5.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   }
 }
